feat: scripts for DB running

--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "import-ingredients": "ts-node --project tsconfig.scripts.json src/scripts/import-ingredients.ts",
-    "validate-data": "ts-node --project tsconfig.scripts.json src/scripts/validate-data.ts",
+    "setup:db": "npx ts-node --project tsconfig.scripts.json scripts/setup-db.ts",
+    "db:start": "docker compose up -d || docker-compose up -d",
+    "db:stop": "docker compose down || docker-compose down",
+    "db:restart": "npm run db:stop && npm run db:start",
+    "db:migrate": "npx prisma migrate deploy",
+    "db:generate": "npx prisma generate",
+    "db:studio": "npx prisma studio",
+    "db:reset": "npx prisma migrate reset",
+    "predev": "npm run setup:db",
+    "import-ingredients": "npx ts-node --project tsconfig.scripts.json src/scripts/import-ingredients.ts",
+    "validate-data": "npx ts-node --project tsconfig.scripts.json src/scripts/validate-data.ts",
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start -H 0.0.0.0",
