chore: update dependencies and add new scripts for web scraping and ingredient import

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "db:reset": "npx prisma migrate reset",
     "predev": "npm run setup:db",
     "import-ingredients": "npx ts-node --project tsconfig.scripts.json src/scripts/import-ingredients.ts",
+    "import-recipes": "npx ts-node --project tsconfig.scripts.json src/scripts/add-recipe.ts",
     "validate-data": "npx ts-node --project tsconfig.scripts.json src/scripts/validate-data.ts",
+    "scrape-silpo": "npx ts-node --project tsconfig.scripts.json src/scripts/scrape-silpo.ts",
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start -H 0.0.0.0",
@@ -41,6 +43,7 @@
     "@types/csv-parse": "^1.1.12",
     "add": "^2.0.6",
     "axios": "^1.12.2",
+    "cheerio": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -50,6 +53,7 @@
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "puppeteer": "^23.11.1",
     "react": "19.1.0",
     "react-burger-menu": "^3.1.0",
     "react-day-picker": "^9.11.1",
@@ -69,6 +73,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/axios": "^0.9.36",
+    "@types/cheerio": "^0.22.35",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-burger-menu": "^2.8.7",
